--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,21 +7,29 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
         <activity
             android:name=".MyActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
-
         </activity>
+
         <activity
             android:name=".PictureActivity"
             android:label="@string/title_activity_picture"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+        </activity>
+
+        <activity
+            android:name=".GestureTest"
+            android:label="@string/title_activity_gesture_test" >
+
         </activity>
     </application>
 
